--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: rgb(71, 71, 71);
 }
 
 .fadein-line {
